# plaud-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/plaud_mcp/: plaud_client.py  server.py
src/plaud_mcp/audio/: __init__.py  align.py  diarize.py  models.py  pipeline.py  transcribe.py
tests/audio/: test_align.py  test_models.py  test_pipeline.py  test_server_registration.py
transcripts/: 2026-03-23_03-23_mdm_working_group.md  2026-03-23_03-23_scrum.md  2026-03-23_3-23_chris_keith_matt_and_elliot_talking_about_mdm_and_ai.md  2026-03-23_3-23_debrief_with_matt.md  2026-03-25_03-25_team_sync_on_office_relocation_project_updates_and_ai_initiatives.md  2026-03-26_03-26_misunderstanding_over_meeting_location_due_to_ambiguous_calendar_invitatio.md  2026-03-27_03-27_ai_prompt_engineering_weekly_check-in.md  2026-03-30_03-30_team_sync_and_project_updates.md  2026-03-30_2026-03-30_062355.md  2026-03-31_03-31_review_and_refinement_of_a_draft_ai_policy_document.md  2026-04-01_04-01_team_sync_on_office_relocation_and_project_updates.md  2026-04-01_2026-04-01_130048.md  2026-04-03_04-03_planning_a_move_logistics_financial_strategy_and_relationship_dynamics.md  INDEX.md  _build.py
